--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,95 @@
-<p>
-  header works!
-</p>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<div class="row top-bar">
+  <div class="col-md-4">
+    <a href="/" class="menu">
+      <img class="img-responsive" src="assets/images/menu.png">
+    </a>
+  </div>
+
+  <div class="col-md-2">
+    <a href="/" class="login">
+      <img class="img-responsive" src="assets/images/logo.png">
+    </a>
+  </div>
+  <div class="col-md-4">
+    <div class="icons">
+
+
+    <a href="https://www.apple.com/itunes/" class="fa fa-apple"></a>
+    <a href="https://www.spotify.com/us/" class="fa fa-spotify"></a>
+    <a href="https://www.youtube.com" class="fa fa-youtube"></a>
+    </div>
+
+  </div>
+
+  <div class="col-md-2">
+    <div class="cz">
+
+      <!-- <a href="#" class="fa fa-facebook"></a>
+      <a href="#" class="fa fa-twitter"></a> -->
+      <!-- <div class="cA">
+        <a class="cB" href="https://www.facebook.com/bustledotcom/" title="Facebook" target="_blank" rel="noopener noreferrer">
+          <i class="cC eT"></i>
+          </a>
+          <a class="cB" href="https://twitter.com/bustle" title="Twitter" target="_blank" rel="noopener noreferrer"><i class="cC eU"></i></a>
+          <a class="cB" href="https://www.pinterest.com/bustledotcom/" title="Pinterest" target="_blank" rel="noopener noreferrer"><i class="cC eV">
+          </i>
+        </a>
+          <a class="cB" href="https://www.instagram.com/bustle/" title="Instagram" target="_blank" rel="noopener noreferrer"><i class="cC eW"></i></a>
+          <a class="cB" href="https://www.youtube.com/channel/UCHcIcCNAULM4qWs6-9Iy-Tw" title="Youtube" target="_blank" rel="noopener noreferrer"><i class="cC eX">
+          </i>
+          </a>
+          <a class="cB" href="https://itunes.apple.com/us/artist/bustle/id1019829583?mt=2" title="Podcast" target="_blank" rel="noopener noreferrer"><i class="cC eY">
+          </i>
+         </a>
+          </div> -->
+          <label for="searchCheckbox" class="cF" tabindex="0"></label>
+        <div class="col-md-2">
+          <div class="cK">
+          <div class="cM" aria-label="Region">
+          </div>
+          <!-- <div class="cL">
+            <a href="/" class="cP" aria-label="US Site">
+            </a>
+          </div>
+          <div class="cL"><a href="/uk" class="cO" aria-label="UK Site">
+          </a>
+        </div>  -->
+        </div>
+
+        </div>
+          <!--  -->
+      </div>
+</div>
+  <!-- <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10 col-xl-10 user-action">
+    <div class="button">
+
+      <ul>
+        <li><a href="#"></a></li>
+        <!-- <li><button class="btn-danger"></button> </li> -->
+      <!-- </ul>
+    </div>
+    <div class="row header">
+      <nav>
+        <ul class='options'>
+          <span (mouseenter)="hover=true" (mouseleave)="hover=false" class="hoverItem">
+          <li><a href="#"></a></li>
+          <div *ngIf= "hover" class ="why">
+            <ul class="info">
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ul>
+          </div>
+        </span>
+          <li><a href="#"></a></li>
+          <li><a href="#"></a></li>
+          <li><a href="#"></a></li>
+          <li><a href="#"></a></li>
+          <li><a href="#"></a></li>
+        </ul>
+      </nav>
+    </div>
+  </div> --> -->
+</div>
