--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <!-- // navbar.component.html -->
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="#">
     Brand
   </a>
@@ -23,4 +23,4 @@
       </li>
     </ul>
   </div>
-</nav>
+</nav> -->
