--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -66,7 +66,7 @@
 
       <ul>
         <li><a href="#"></a></li>
-        <!-- <li><button class="btn-danger"></button> </li> -->
+        <!-<li><button class="btn-danger"></button> </li> -->
       <!-- </ul>
     </div>
     <div class="row header">
@@ -91,5 +91,5 @@
         </ul>
       </nav>
     </div>
-  </div> --> -->
+  </div> --> 
 </div>
