--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -1,4 +1,22 @@
 
+<!-- <div class="col-md-3">
+  <a href="/" class="j">
+    <img  src="assets/images/j.jpg">
+  </a>
+
+</div>
+<div class="col-md-3">
+
+</div>
+<div class="col-md-3">
+
+</div>
+<div class="col-md-3">
+
+</div> -->
+<div class="row">
+
+
 <div class="col-md-2">
 
 </div>
@@ -23,3 +41,21 @@
 <div class="col-md-2">
 
 </div>
+</div>
+<a href="/" class="s">
+  <img  src="assets/images/j.jpg">
+</a>
+<div class="HH">
+
+
+<div class="hH">
+  <h3 class="hO"> 10 Women Reveal The WEIRDEST Things They Were Asked To Do As Bridesmaids</h3>
+  <div class="hP">
+    At some point or another, you may be asked to be a bridesmaid in your friend’s wedding — or perhaps you’ve already been one, and maybe more than once. As a bridesmaid, you’ve probably been asked to help the bride with various wedding-related tasks,…
+  </div>
+    <div class="hQ">
+
+      <cite class="hR">By Natalia Lusinski</cite>
+    </div>
+  </div>
+  </div>
