--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<div class="container">
+
+
 <div class="row top-bar">
   <div class="col-md-4">
     <a href="/" class="menu">
@@ -60,6 +63,7 @@
         </div>
           <!--  -->
       </div>
+</div>
 </div>
 
 </div>
