add link in body compontents

--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -42,7 +42,7 @@
 
 </div>
 </div>
-<a href="/" class="s">
+<a href="https://www.bustle.com/p/10-women-reveal-the-weirdest-things-they-were-asked-to-do-as-bridesmaids-10141763" class="s">
   <img  src="assets/images/j.jpg">
 </a>
 <div class="HH">
@@ -50,10 +50,10 @@
 
 <div class="hH">
   <h3 class="hO"> 10 Women Reveal The WEIRDEST Things They Were Asked To Do As Bridesmaids</h3>
-  <div class="hP">
+  <!-- <div class="hP">
     At some point or another, you may be asked to be a bridesmaid in your friend’s wedding — or perhaps you’ve already been one, and maybe more than once. As a bridesmaid, you’ve probably been asked to help the bride with various wedding-related tasks,…
-  </div>
-    <div class="hQ">
+  </div> -->
+   <div class="hQ">
 
       <cite class="hR">By Natalia Lusinski</cite>
     </div>
