--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,69 +1,44 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<div class="container">
 
 
-<div class="row top-bar">
-  <div class="col-md-4">
-    <a href="/" class="menu">
-      <img class="img-responsive" src="assets/images/menu.png">
-    </a>
-  </div>
 
-  <div class="col-md-2">
-    <a href="/" class="login">
-      <img class="img-responsive" src="assets/images/logo.png">
-    </a>
-  </div>
-  <div class="col-md-4">
-    <div class="icons">
-
-
-    <a href="https://www.apple.com/itunes/" class="fa fa-apple"></a>
-    <a href="https://www.spotify.com/us/" class="fa fa-spotify"></a>
-    <a href="https://www.youtube.com" class="fa fa-youtube"></a>
-    </div>
-
-  </div>
-
-  <div class="col-md-2">
-    <div class="cz">
-
-      <!-- <a href="#" class="fa fa-facebook"></a>
-      <a href="#" class="fa fa-twitter"></a> -->
-      <!-- <div class="cA">
-        <a class="cB" href="https://www.facebook.com/bustledotcom/" title="Facebook" target="_blank" rel="noopener noreferrer">
-          <i class="cC eT"></i>
-          </a>
-          <a class="cB" href="https://twitter.com/bustle" title="Twitter" target="_blank" rel="noopener noreferrer"><i class="cC eU"></i></a>
-          <a class="cB" href="https://www.pinterest.com/bustledotcom/" title="Pinterest" target="_blank" rel="noopener noreferrer"><i class="cC eV">
-          </i>
+<div class="row">
+  <table>
+    <tr>
+      <td>
+        <a href="/" class="menu">
+          <img class="img-responsive" src="assets/images/menu.png">
         </a>
-          <a class="cB" href="https://www.instagram.com/bustle/" title="Instagram" target="_blank" rel="noopener noreferrer"><i class="cC eW"></i></a>
-          <a class="cB" href="https://www.youtube.com/channel/UCHcIcCNAULM4qWs6-9Iy-Tw" title="Youtube" target="_blank" rel="noopener noreferrer"><i class="cC eX">
-          </i>
-          </a>
-          <a class="cB" href="https://itunes.apple.com/us/artist/bustle/id1019829583?mt=2" title="Podcast" target="_blank" rel="noopener noreferrer"><i class="cC eY">
-          </i>
-         </a>
-          </div> -->
-          <label for="searchCheckbox" class="cF" tabindex="0"></label>
-        <div class="col-md-2">
-          <div class="cK">
-          <div class="cM" aria-label="Region">
-          </div>
-          <!-- <div class="cL">
-            <a href="/" class="cP" aria-label="US Site">
-            </a>
-          </div>
-          <div class="cL"><a href="/uk" class="cO" aria-label="UK Site">
-          </a>
-        </div>  -->
+      </td>
+
+      <td>
+        <a href="/" class="login">
+          <img class="img-responsive" src="assets/images/Bustlelogo.jpg">
+        </a>
+      </td>
+      <td>
+        <div class="topnav">
+
+          <a href="https://www.instagram.com/"><i style="font-size:20px color: #d3d3d3" class="fa">&#xf16d;</i></a>
+          <a href="https://www.flickr.com/photos/"><i style="font-size:20px color: #d3d3d3" class="fa">&#xf16e;</i></a>
+          <a href="https://www.youtube.com/user/"><i style="font-size:20px color: #d3d3d3 " class="fa">&#xf167;</i></a>
+          <a href="https://twitter.com/"><i style="font-size:20px color: #d3d3d3" class="fa">&#xf099;</i></a>
+          <a href="https://www.facebook.com/"><i style="font-size:20px color: #d3d3d3" class="fa fa-facebook"></i></a>
+          <label for="searchCheckbox" class="cF" tabindex="0"> <img src="https://cdn.bustle.com/bustle/production/public/search-268eb1.svg" alt="">
+          </label>
         </div>
 
-        </div>
-          <!--  -->
-      </div>
-</div>
-</div>
+
+      </td>
+
+
+
+
+
+
+
+
+    </tr>
+  </table>
 
 </div>
