--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,100 +1,8 @@
 
-/*body{
-  color: #333;
-  font-family: 'Open Sans', sans-serif;
-  font-size: 16px;
-};*/
-.container{
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-right: auto;
-  margin-left:auto;
-}
-.row {
-  border-bottom: 1px dashed #cfcfcf;
-  max-width: 1400px;
-  padding: 0 1.071em 0 1.071em;
-  font-size: 14px;
-  padding-top: 10px;
-  margin-right: -15px;
-  margin-left: -15px;
-  float: left;
-}
-
-.cz {
-    color: #9b9b9b;
-}
-.cA {
-    display: none;
-}
-.cB {
-    display: inline-block;
-    margin: 0 3px;
-    width: 29px;
-    opacity: 0.3;
-}
-a {
-    color: #222;
-    background: transparent;
-    cursor: pointer;
-    text-decoration: none;
-    word-wrap: break-word;
-}
-.cF {
-    cursor: pointer;
-    height: 50px;
-    width: 50px;
-    background-color: transparent;
-    background-image: url(https://cdn.bustle.com/bustle/production/public/search-268eb1.svg);
-    background-size: 20px;
-    background-repeat: no-repeat;
+  .login img{
+    /* height: 50px;
+    width: 50px; */
     background-position: center;
-    padding: 20px;
-    margin-right: 100px;
-    position: absolute;
-    right: 40px;
-    top: 0;
-    vertical-align: top;
-}
-.cM {
-    background-image: url(https://cdn.bustle.com/bustle/production/public/globe-167e6c.svg);
-    background-size: 20px;
-    background-repeat: no-repeat;
-    background-position: center;
-    z-index: -1;
-    opacity: 0.8;
-}
-.cK {
-  cursor: pointer;
-  height: 50px;
-  width: 50px;
-  background-color: transparent;
-  /*background-image: url(https://cdn.bustle.com/bustle/production/public/search-268eb1.svg);*/
-  background-size: 20px;
-  background-repeat: no-repeat;
-  background-position: center;
-  padding: 20px;
-  margin-top: 16px;
-  margin-right: 25px;
-  position: absolute;
-  right: 40px;
-  top: 0;
-  vertical-align: top;
-
-}
-.cK a, .cK div {
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-    position: absolute;
-    /*top: calc(10px/4);*/
-    transition: 0.25s;
-    transition-timing-function: cubic-bezier(0.7,2.5,0,1);
-    cursor: pointer;
-    background-size: cover;
-}
-.login img{
-      background-position: center;
       background-size: 100%;
       background-repeat: no-repeat;
       bottom: 0;
@@ -102,30 +10,29 @@ a {
       right: 0;
       top: 0;
       margin: auto;
-      margin-left: 500px;
+      margin-left: 400px;
       text-align: center;
       width: 105px;
-
-
-
-      /*transition: background-image 0.3s;*/
-        /*position: absolute;*/
-
+      margin-top: 40px;
   }
   .menu img{
-    cursor: pointer;
+    height: 24px;
+    width: 24px;
+    margin-top: 40px;
+    /* cursor: pointer;
     height: 30px;
     margin-top: 20px;
     margin: auto;
-    padding: 25px;
+    padding: 50px;
     position: absolute;
     top: 0;
     bottom: 0;
     width: 30px;
     transition: all 0.3s;
-
+    margin-left: 50px; */
 
   }
+
 .btn-danger{
   background-color: #CA0183;
   padding: 0.357em 1.071em;
@@ -225,4 +132,38 @@ padding: 1%
 .icons a {
 color: #000000;
 margin: 2% 2% 2% 2%;
+}
+.topnav{
+  margin-left: 200px;
+  /* padding-bottom: 30px;
+  margin-bottom: 50px; */
+  opacity: inherit;
+  margin-top: 30px;
+  
+}
+.row{
+  margin: auto;
+  align-content: flex-start;
+  display: inline;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-around;
+
+}
+.cF {
+    cursor: pointer;
+    height: 50px;
+    width: 50px;
+    background-color: transparent;
+    /* background-image: url(https://cdn.bustle.com/bustle/production/public/search-268eb1.svg); */
+    background-size: 20px;
+    background-repeat: no-repeat;
+    background-position: center;
+    padding: 20px;
+    margin-right: 150px;
+    position: absolute;
+    right: 40px;
+    top: 0;
+    vertical-align: top;
+    margin-top: 22px;
 }
