add separate component for api

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,55 +19,13 @@
   <div class="row">
     <app-body></app-body>
   </div>
+  <div class="row">
+    <app-business-api></app-business-api>
+  </div>
 
 
 
   <div class="row">
     <app-footer></app-footer>
   </div>
-</div>
-<div class="news">
-  <div class="row">
-    <div class="col-md-3">
-
-    </div>
-
-    <div class="col-md-6">
-      <ng-container *ngFor="let article of data.articles">
-
-
-
-       <div *ngIf='article.urlToImage!=null && article.description!=null || article.description!="" && article.title!=null && article.author!=null '>
-        <div class="box">
-
-        <div class="panel panel-default">
-
-
-
-
-          <a href="{{article.url}}"> <h2 class="panel-header t">{{article.title}}</h2>
-
-            <div class="panel-body">
-
-              <div class="pic">
-
-
-                <img src="{{article.urlToImage}}" alt="">
-              </div>
-              <p class="s">{{article.description}}</p>
-              <cite class="h">{{article.author}}</cite>
-            </div>
-          </a>
-
-        </div>
-        </div>
-        </div>
-      </ng-container>
-    </div>
-    <div class="col-md-3">
-
-    </div>
-
-  </div>
-
 </div>
