--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,8 +1,13 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+<body>
 
 
-<div class="row">
+
+<div class=" container-fluid">
+  <div class="row">
+
+
   <table>
     <tr>
       <td>
@@ -19,13 +24,20 @@
       <td>
         <div class="topnav">
 
+
+
           <a href="https://www.instagram.com/"><i style="font-size:20px color: #d3d3d3" class="fa">&#xf16d;</i></a>
           <a href="https://www.flickr.com/photos/"><i style="font-size:20px color: #d3d3d3" class="fa">&#xf16e;</i></a>
           <a href="https://www.youtube.com/user/"><i style="font-size:20px color: #d3d3d3 " class="fa">&#xf167;</i></a>
           <a href="https://twitter.com/"><i style="font-size:20px color: #d3d3d3" class="fa">&#xf099;</i></a>
           <a href="https://www.facebook.com/"><i style="font-size:20px color: #d3d3d3" class="fa fa-facebook"></i></a>
-          <label for="searchCheckbox" class="cF" tabindex="0"> <img src="https://cdn.bustle.com/bustle/production/public/search-268eb1.svg" alt="">
+
+          <label for="searchCheckbox" class="cF" tabindex="0"> <img src="assets/images/search.png" alt="">
           </label>
+          <!-- <a href="/" class="world">
+            <img src="assets/images/world.png"  alt="">
+          </a> -->
+
         </div>
 
 
@@ -38,7 +50,10 @@
 
 
 
+
     </tr>
   </table>
+  </div>
 
 </div>
+</body>
