created side navbar}

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,13 +14,43 @@
 
             <div id="mySidenav" class="sidenav">
               <a href="javascript:void(0)" class="closebtn" (click)="closeNav()">&times;</a>
-              <a href="/" class="login">
-                <img class="img-responsive" src="assets/images/Bustlelogo.jpg">
-              </a>
-              <a href="#">About</a>
-              <a href="#">Services</a>
-              <a href="#">Clients</a>
-              <a href="#">Contact</a>
+
+              <!-- <img class="img-responsive" src="assets/images/Bustlelogo.jpg"> -->
+
+              <a href="#">NEWS</a>
+              <a href="#">ENTERTAINMENT</a>
+              <a href="#">BEAUTY</a>
+              <a href="#">FASHION</a>
+              <a href="#">LIFESTYLE</a>
+              <a href="#">BOOKS</a>
+              <a href="#">TECHS</a>
+              <a href="#">FOOD</a>
+              <a href="#">FEATURES</a>
+            <footer class="bottommenu">
+              <div class="container">
+              <div class="co">
+                <a href="https://bustle.company/" class="cp" target="_blank" rel="noopener noreferrer">About Us</a>
+                <a href="https://bustle.company/advertise" class="cp">Advertise</a>
+                <a href="/apps" class="cp">Apps</a>
+                <a href="/labs" class="cp">Labs</a>
+                <a href="/tos" class="cp">Terms</a>
+                <a href="/privacy" class="cp">Privacy</a>
+                <a href="/dmca" class="cp">DMCA</a>
+                <a href="/contact" class="cp">Contact Us</a>
+              </div>
+              </div>
+              <div class="foo">
+
+                 <a href="https://www.instagram.com/bustle/"><i style="font-size:30px color: #FFFFFF" class="fa fa">&#xf16d;</i></a>
+                 <a href="https://www.flickr.com/photos/"><i style="font-size:30px color: #FFFFFF" class="fa">&#xf16e;</i></a>
+                 <a href="https://www.youtube.com/channel/UCHcIcCNAULM4qWs6-9Iy-w"><i style="font-size:30px color: #FFFFFF " class="fa">&#xf167;</i></a>
+                 <a href="https://twitter.com/bustle"><i style="font-size:30px color: #FFFFFF" class="fa">&#xf099;</i></a>
+                 <a href="https://www.facebook.com/bustledotcom/"><i style="font-size:30px color: #FFFFFF" class="fa fa-facebook"></i></a>
+              </div>
+              <div class="ct"><span class="cu">®</span> 2018 Bustle, data source: newsapi</div>
+
+              </footer>
+
             </div>
 
             <span style="font-size:30px;cursor:pointer" (click)="openNav()">&#9776;</span>
