--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -205,6 +205,7 @@ margin: 2% 2% 2% 2%;
     color: white;
     display: block;
     transition: 0.3s;
+    text-align: center;
 }
 
 .sidenav a:hover {
@@ -224,18 +225,52 @@ margin: 2% 2% 2% 2%;
   .sidenav {padding-top: 15px;}
   .sidenav a {font-size: 18px;}
 }
-.sidenav img{
-    /* background-position: center; */
-    /* background-size: 100%; */
-    background-repeat: no-repeat;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    top: 0;
-    margin: auto;
-    margin-left: 400px;
-    text-align: center;
-    width: 105px;
-    margin-top: 40px;
-    color: white;
+.co{
+  margin: 15px 0;
+  text-align: center;
+  display: inline-flex;
+  flex-wrap: wrap;
+  align-content: center;
+  /* word-spacing: 5px; */
+  border-bottom: 1px solid white;
 }
+.cp{
+  color: white;
+  display: inline-block;
+  font-size: 0.8rem;
+  font-family: 'Roboto',sans-serif;
+  font-weight: 500;
+  /* letter-spacing: 1px; */
+  /* padding: 7px 0; */
+  text-transform: capitalize;
+  /* margin: 0 0.4rem; */
+
+}
+.foo {
+
+    margin-bottom: 30px;
+    padding: 5px 10px;
+    text-align: center;
+    display: inline-flex;
+    align-content: center;
+    border-bottom: 1px solid white;
+    /* justify-content: space-around; */
+    flex-wrap: wrap;
+}
+ .foo a{
+   height:30px;
+   word-wrap: break-word;
+ }
+ .ct {
+     font-size: 0.7rem;
+     line-height: 0.7rem;
+     margin-bottom: 30px;
+     margin-top: -10px;
+     position: relative;
+     text-align: center;
+     color: white;
+
+ }
+ .bottommenu{
+   background: #4d9aff;
+ }
