--- a/src/app/job-detail/job-detail.component.html
+++ b/src/app/job-detail/job-detail.component.html
@@ -1,3 +1,5 @@
-<p>
-  job-detail works!
-</p>
+<div>
+  <h3>{{(jobToDisplay | async)?.title}}</h3>
+  <h4>{{(jobToDisplay | async)?.description}}</h4>
+  <p>{{(jobToDisplay | async)?.deadline}}</p>
+</div>
