--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,3 +1,33 @@
-<p>
-  admin works!
-</p>
+<div class="card card-default">
+  <div class="card-heading">
+    <h3 class="card-title">Add New Job to List</h3>
+  </div>
+  <div class="card-body">
+    <div>
+      <div>
+        <label>Job Title:</label>
+        <br>
+        <input #newTitle>
+      </div>
+      <div>
+        <label>Job Description:</label>
+        <br>
+        <textarea #newDescription></textarea>
+      </div>
+
+      <div>
+        <label>Application Deadline:</label>
+        <br>
+        <input #newDeadline>
+      </div>
+      <div>
+
+
+
+      <button (click)="submitForm(newTitle.value,newDescription.value, newDeadline.value); newTitle.value=''; newDescription.value=''; newDeadline.value=''">Add</button>
+    </div>
+  </div>
+</div>
+<div>
+  <app-page-list></app-page-list>
+</div>
