fire base is working , but job list is coming on the main page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,22 +10,21 @@
 </div> -->
 
 <div class="container">
-  <div class="row">
+
     <app-header></app-header>
-  </div>
 
 
 
-  <div class="row">
+
+  <!-- <div class="row">
     <app-body></app-body>
   </div>
   <div class="row">
     <app-business-api></app-business-api>
-  </div>
+  </div> -->
 
 
 
-  <div class="row">
-    <app-footer></app-footer>
-  </div>
+  
+  <router-outlet></router-outlet>
 </div>
