--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -29,6 +29,7 @@
             <footer class="bottommenu">
               <div class="container">
               <div class="co">
+                <a routerLink="jobs">Career</a>
                 <a class="text-muted" routerLink="admin">Admin</a>
                 <a href="https://bustle.company/" class="cp" target="_blank" rel="noopener noreferrer">About Us</a>
                 <a href="https://bustle.company/advertise" class="cp">Advertise</a>
