--- a/src/app/jobs/jobs.component.html
+++ b/src/app/jobs/jobs.component.html
@@ -2,13 +2,13 @@
 
 <div *ngFor="let job of jobs | async" class="card card-default">
   <div class="card-body">
-    <h3 (click)="goToDetailPage(job)"><em>{{job.title}}</em> </h3>
+    <h3 (click)="goToDetailJobs(job)"><em>{{job.title}}</em> </h3>
     <div *ngIf="currentRoute === '/admin'">
       Job Description: {{job.description}}
       <hr>
       Application deadline: {{job.deadline}}
       <hr>
-      <app-edit-job [selectedJob]="job"></app-edit-job>
+      <app-edit-jobs [selectedJob]="job"></app-edit-jobs>
     </div>
   </div>
 </div>
