delete function working

--- a/src/app/job-detail/job-detail.component.html
+++ b/src/app/job-detail/job-detail.component.html
@@ -1,5 +1,5 @@
 <div>
   <h3>{{(jobToDisplay | async)?.title}}</h3>
-  <h4>{{(jobToDisplay | async)?.description}}</h4>
-  <p>{{(jobToDisplay | async)?.deadline}}</p>
+  <h4>Description: {{(jobToDisplay | async)?.description}}</h4>
+  <p>Deadline:{{(jobToDisplay | async)?.deadline}}</p>
 </div>
