edit function works

--- a/src/app/edit-jobs/edit-jobs.component.html
+++ b/src/app/edit-jobs/edit-jobs.component.html
@@ -8,7 +8,7 @@
 <input [(ngModel)]="selectedJob.description">
 <br>
 <label>New application Deadline:</label>
-<input [(ngModel)]="selectedJob.target">
+<input [(ngModel)]="selectedJob.deadline">
 <br>
 
 
